<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/gradient_bg"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="back" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ease_mm_title_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/The_new_chat_room"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:onClick="save"
            android:text="@string/button_save"
            android:layout_marginTop="20dp"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_chat_room_name"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:background="@drawable/em_button_normal_shape"
        android:hint="@string/chat_room_name"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_chat_room_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/em_button_normal_shape"
        android:gravity="top"
        android:hint="@string/chat_room_description"
        android:lines="5"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:textSize="18sp" />

</LinearLayout>