<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="100dp"
    android:layout_marginRight="100dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/rect_gray"
        android:orientation="vertical">
        <!--android:alpha="0.9"-->
        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="copy"
            android:padding="10dp"
            android:text="@string/copy_message"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="delete"
            android:padding="10dp"
            android:text="@string/delete_message"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_forward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="forward"
            android:padding="10dp"
            android:text="@string/forward"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <!--<View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />-->

        <TextView
            android:id="@+id/recall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="recall"
            android:visibility="gone"
            android:padding="10dp"
            android:text="@string/retract_message"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>