<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ededed"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ededed"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/logout_hint"
            android:textColor="#808080"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@drawable/rect_green"
                android:onClick="logout"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@drawable/rect_green"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>